[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "depth-anything-v2"
version = "1.0.0"
description = "Depth Anything V2 - A robust monocular depth estimation model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Yunho Cho", email = "yunho.cho@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/yunhocho/Depth-Anything-V2"

[tool.setuptools]
packages = ["depth_anything_v2", "depth_anything_v2.dinov2_layers", "depth_anything_v2.util"]
package-dir = {"" = "."}
